feat: add scrolling, fix menu button, redirect on click navigation

--- a/src/styles/_navItem.scss
+++ b/src/styles/_navItem.scss
@@ -6,6 +6,7 @@
   color: white;
   position: relative;
   transition: all 0.2s linear;
+  text-transform: uppercase;
   &::before {
     content: "";
     width: 0;
