--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,14 +1,19 @@
-.layout {
-  width: 100%;
-  min-height: 100vh;
-  background-color: black;
+.layout-wrapper {
+  .layout {
+    width: 100%;
+    min-height: 100vh;
+    background-color: black;
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+    opacity: 0;
 
-  .layout-container {
-    padding: 60px 25px;
+    .layout-container {
+      padding: 60px 25px;
 
-    & h1 {
-      margin: 40px 0;
-      text-transform: uppercase;
+      & h1 {
+        font-size: 4.5vw;
+        margin: 40px 0;
+        text-transform: uppercase;
+      }
     }
   }
 }
