--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,9 +1,8 @@
 .layout-wrapper {
   .layout {
-    width: 100%;
     min-height: 100vh;
     background-color: black;
-    border-top: 1px solid rgba(255, 255, 255, 0.1);
+    // border-top: 1px solid rgba(255, 255, 255, 0.1);
     opacity: 0;
 
     .layout-container {
@@ -13,7 +12,23 @@
         font-size: 4.5vw;
         margin: 40px 0;
         text-transform: uppercase;
+        border-right: 2px solid rgb(255, 255, 255);
       }
     }
+  }
+
+  .layout-margin-left {
+    margin-left: 30%;
+  }
+
+  .layout-margin-right {
+    margin-right: 30%;
+  }
+}
+
+.s {
+  & p {
+    font-size: 3vw;
+    font-weight: 300;
   }
 }
