--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,2 +1,12 @@
 $mainColor: #ffffff;
 $goldColor: #f7cc4c;
+$black: black;
+
+///////////////////////////////
+$mineShaft: #313131;
+$codGray: #191919;
+$codGrayDark: #111111;
+$saffronMango: #f7cc4c;
+$mineShaftLight: #252525;
+$codGrayJs: #151515;
+$mineShaftLighter: #393939;
