--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;700;800;900&display=swap");
+
 *,
 *::after,
 *::before {
@@ -28,11 +30,23 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
   /* overflow: hidden; */
-  /* for future enable */
+  /* In the future enable */
   color: white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+span {
+  font-family: "Darker Grotesque", sans-serif;
 }
