--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -4,7 +4,7 @@
   &::after {
     content: "";
     width: 40%;
-    height: 1px;
+    height: 2px;
     position: absolute;
     bottom: -50px;
     right: 0;
@@ -13,6 +13,7 @@
     background-color: rgba(255, 255, 255, 0.2);
     z-index: 1;
   }
+
   .layout {
     width: 100%;
     height: 100%;
@@ -24,13 +25,12 @@
     .layout-container {
       width: 100%;
       height: auto;
-      padding: 60px 25px;
+      padding: 60px 10%;
       position: relative;
 
       & h1 {
-        font-family: "Poppins", sans-serif;
-        font-size: 95px;
-        margin: 40px 0;
+        font-size: 144px;
+        margin: 0 0 46px 0;
         text-transform: uppercase;
         color: #ffffff23;
         letter-spacing: 25px;
