--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -610,6 +610,7 @@
   height: 100vh;
   text-align: center;
   position: relative;
+  background-color: black;
 }
 
 .home-page-container .home-page-text-content {
@@ -652,6 +653,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
+  z-index: 1;
 }
 
 .home-page-container .home-page-main-content .home-page-profile {
@@ -707,7 +709,7 @@
   bottom: 0;
   right: 0;
   margin: auto 0;
-  z-index: -100;
+  z-index: 0;
   -webkit-transition: all 1s linear;
   transition: all 1s linear;
 }
@@ -758,6 +760,7 @@
   right: 1.4rem;
   -webkit-transition: all 0.2s linear;
   transition: all 0.2s linear;
+  z-index: 10;
   cursor: pointer;
 }
 
@@ -784,6 +787,7 @@
   right: 1.4rem;
   -webkit-transition: all 0.2s linear;
   transition: all 0.2s linear;
+  z-index: 10;
   cursor: pointer;
 }
 
@@ -798,7 +802,7 @@
 .layout-wrapper::after {
   content: "";
   width: 40%;
-  height: 1px;
+  height: 2px;
   position: absolute;
   bottom: -50px;
   right: 0;
@@ -822,14 +826,13 @@
 .layout-wrapper .layout .layout-container {
   width: 100%;
   height: auto;
-  padding: 60px 25px;
+  padding: 60px 10%;
   position: relative;
 }
 
 .layout-wrapper .layout .layout-container h1 {
-  font-family: "Poppins", sans-serif;
-  font-size: 95px;
-  margin: 40px 0;
+  font-size: 144px;
+  margin: 0 0 46px 0;
   text-transform: uppercase;
   color: #ffffff23;
   letter-spacing: 25px;
@@ -899,32 +902,57 @@
 
 .square-wrapper {
   position: absolute;
-  bottom: 0;
-  right: 120px;
+  bottom: 28%;
+  right: 18%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   z-index: 1;
 }
 
-.square-wrapper > div {
-  background-color: #ffffff11;
-  border-radius: 25%;
-  display: inline-block;
+.square-wrapper img {
+  width: 438px;
+  height: 438px;
+  aspect-ratio: 1/1;
+}
+
+@media (max-width: 1024px) {
+  .square-wrapper {
+    bottom: 38%;
+    right: 10%;
+  }
+  .square-wrapper img {
+    width: 238px;
+    height: 238px;
+  }
 }
 
 .about-wrapper {
-  position: relative;
   display: -ms-grid;
   display: grid;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  z-index: 10;
+  position: relative;
+  z-index: 5;
+}
+
+.about-wrapper::after {
+  content: "";
+  position: absolute;
+  top: 600px;
+  left: -13%;
+  width: 360px;
+  height: 4px;
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 .about-wrapper p {
-  margin-right: 17%;
-  font-size: larger;
-  font-weight: 300;
-  line-height: 35px;
+  max-width: 1088px;
+  font-size: 48px;
+  font-weight: 400;
+  line-height: 125.5%;
+}
+
+.about-wrapper strong {
+  font-weight: 700;
 }
 
 .about-wrapper .about-amounts-container {
@@ -941,10 +969,14 @@
   -ms-flex-align: center;
   align-items: center;
   width: 100%;
-  margin-top: 420px;
+  margin-top: 718px;
 }
 
 @media (max-width: 1024px) {
+  .about-wrapper::after {
+    top: 300px;
+    width: 140px;
+  }
   .about-wrapper p {
     font-size: 20px;
     line-height: 25px;
@@ -960,7 +992,6 @@
 
 #Technologies {
   position: relative;
-  background-color: #141414;
 }
 
 #Technologies .layout {
@@ -984,8 +1015,8 @@
 }
 
 #Technologies .technologies-wrapper .slider-item {
-  min-width: 350px;
-  height: 350px;
+  min-width: 450px;
+  height: 450px;
 }
 
 #Technologies .technologies-wrapper .slider-item .slider-item-title {
@@ -1031,7 +1062,7 @@
 }
 
 .slick-slider .slick-list .slick-track .slick-slide {
-  min-width: 350px;
+  min-width: 450px;
   margin: 0 5px;
 }
 /*# sourceMappingURL=styles.css.map */
