--- a/src/styles/_square.scss
+++ b/src/styles/_square.scss
@@ -8,7 +8,13 @@
   & img {
     width: 438px;
     height: 438px;
-    aspect-ratio: 1/1;
+    aspect-ratio: 1 / 1;
+  }
+}
+
+@media (max-width: 1280px) {
+  .square-wrapper {
+    bottom: 24%;
   }
 }
 
