--- a/src/styles/_aboutMe.scss
+++ b/src/styles/_aboutMe.scss
@@ -5,44 +5,46 @@
   z-index: 5;
 
   &::after {
-    content: "";
+    content: '';
     position: absolute;
-    top: 600px;
+    width: 180px;
+    top: 300px;
+    // top: 600px;
     left: -13%;
-    width: 360px;
-    height: 4px;
+    // width: 360px;
+    height: 1px;
     background-color: rgba(255, 255, 255, 0.2);
   }
 
   &::before {
-    content: "";
+    content: '';
     position: absolute;
-    top: 1050px;
+    width: 42px;
+    top: 715px;
+    // top: 1050px;
     right: -13%;
-    width: 360px;
-    height: 4px;
+    // width: 360px;
+    height: 1px;
     background-color: rgba(255, 255, 255, 0.2);
   }
 
-  & p {
-    max-width: 1088px;
-    font-size: 48px;
-    font-weight: 400;
-    line-height: 125.5%;
-  }
-
-  & strong {
-    font-weight: 700;
-  }
+  // & p {
+  //   max-width: 1088px;
+  //   font-size: 48px;
+  //   font-weight: 400;
+  //   line-height: 125.5%;
+  // }
 
   .about-amounts-container {
-    @include flexCenter(space-around, center, row);
+    @include flexBox(space-around, center, row);
     width: 100%;
-    margin-top: 718px;
+    margin-top: 120px;
+    flex-direction: column;
+    // margin-top: 718px;
   }
 }
 
-@media (max-width: 1280px) {
+@media (min-width: 1024px) {
   .about-wrapper {
     &::after {
       top: 370px;
@@ -53,32 +55,66 @@
       top: 880px;
     }
 
-    & p {
-      font-size: 32px;
+    .about-amounts-container {
+      margin-top: 718px;
     }
   }
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 1280px) {
   .about-wrapper {
     &::after {
-      width: 180px;
-      top: 300px;
+      top: 1050px;
+      width: 360px;
     }
 
     &::before {
-      width: 42px;
-      top: 715px;
-    }
-
-    & p {
-      font-size: 20px;
-      line-height: 25px;
+      top: 1050px;
+      width: 360px;
     }
 
     .about-amounts-container {
-      margin-top: 120px;
-      flex-direction: column;
+      margin-top: 718px;
     }
   }
 }
+// @media (max-width: 1280px) {
+//   .about-wrapper {
+//     &::after {
+//       top: 370px;
+//     }
+
+//     &::before {
+// width: 215px;
+// top: 880px;
+//     }
+
+//     & p {
+//       font-size: 32px;
+//     }
+//   }
+// }
+
+// @media (max-width: 1024px) {
+//   .about-wrapper {
+//     &::after {
+// width: 180px;
+// top: 300px;
+//     }
+
+//     &::before {
+// width: 42px;
+// top: 715px;
+//     }
+
+//     & p {
+//       font-size: 20px;
+//       line-height: 25px;
+//     }
+
+//     .about-amounts-container {
+//       margin-top: 120px;
+//       flex-direction: column;
+//     }
+//   }
+// }
