--- a/src/styles/_downScreen.scss
+++ b/src/styles/_downScreen.scss
@@ -1,7 +1,7 @@
 .down-screen-container {
   width: 100%;
   height: calc(100vh - calc(100vh - 100%));
-  background: url("../assets/images/background/gradient.png") center no-repeat;
+  background: url('../assets/images/background/gradient.png') center no-repeat;
   background-size: cover;
   display: flex;
   position: fixed;
@@ -11,12 +11,12 @@
   z-index: 100;
 
   .left-side-content {
-    @include flexCenter(center, center);
+    @include flexBox(center, center);
 
     width: 20%;
 
     .left-side-top-container {
-      @include flexCenter(flex-start, flex-end);
+      @include flexBox(flex-start, flex-end);
 
       width: 100%;
       height: 80%;
@@ -26,7 +26,7 @@
     }
 
     .left-side-bottom-container {
-      @include flexCenter(center, flex-end);
+      @include flexBox(center, flex-end);
 
       width: 100%;
       height: 20%;
@@ -34,19 +34,19 @@
     }
   }
   .middle-side-content {
-    @include flexCenter(center, center);
+    @include flexBox(center, center);
 
     width: 100%;
     height: 100%;
 
     .middle-side-container {
-      @include flexCenter(center, flex-start);
+      @include flexBox(center, flex-start);
 
       width: 100%;
       height: 100%;
 
       .middle-navigation-list {
-        @include flexCenter(center, flex-start);
+        @include flexBox(center, flex-start);
 
         position: relative;
         z-index: 101;
