--- a/src/styles/_filterImage.scss
+++ b/src/styles/_filterImage.scss
@@ -1,15 +1,15 @@
 .overlay-filter-image {
-    @include flexCenter(center, center);
+  @include flexBox(center, center);
 
-    width: 10vw;
-    height: 10vw;
-    position: absolute;
-    top: 0;
-    opacity: 0;
-    transition: all .1s linear;
-    
-    #filter-image {
-        width: 100%;
-        filter: url(#noise);
-    }
+  width: 10vw;
+  height: 10vw;
+  position: absolute;
+  top: 0;
+  opacity: 0;
+  transition: all 0.1s linear;
+
+  #filter-image {
+    width: 100%;
+    filter: url(#noise);
+  }
 }
