--- a/src/styles/_menuButton.scss
+++ b/src/styles/_menuButton.scss
@@ -1,5 +1,5 @@
 .menu-button-container {
-  @include flexCenter(space-between, flex-end);
+  @include flexBox(space-between, flex-end);
 
   width: 40px;
   height: 40px;
