chore: delete redundant

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -17,6 +17,7 @@
     height: 100%;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
+    min-height: 800px;
     // opacity: 0;
     // min-height: 1200px;
 
