--- a/src/styles/_mixinStyles.scss
+++ b/src/styles/_mixinStyles.scss
@@ -1,3 +1,11 @@
+@mixin media($breakpoint) {
+  @if map-has-key($breakpoints, $breakpoint) {
+    @media (min-width: map-get($breakpoints, $breakpoint)) {
+      @content;
+    }
+  }
+}
+
 @mixin flexBox($justify, $align, $direction: column) {
   display: flex;
   flex-direction: $direction;
