--- a/src/styles/_homePage.scss
+++ b/src/styles/_homePage.scss
@@ -35,7 +35,6 @@
       overflow: hidden;
 
       h1 {
-        // font-size: 3rem;
         font-weight: 300;
         letter-spacing: 5px;
       }
@@ -68,7 +67,7 @@
   }
 }
 
-@media only screen and (max-width: 1300px) {
+@media (max-width: 1300px) {
   .home-page-container {
     .home-page-main-content {
       flex-direction: column;
