--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -17,9 +17,6 @@
     height: 100%;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    min-height: 800px;
-    // opacity: 0;
-    // min-height: 1200px;
 
     .layout-container {
       width: 100%;
@@ -29,40 +26,21 @@
       grid-column: 1/13;
 
       & h1 {
-        //  font-size: 144px;
         margin: 0 0 46px 0;
         text-transform: uppercase;
         color: #ffffff23;
         letter-spacing: 10px;
-        // letter-spacing: 25px;
       }
     }
   }
 }
 
-@media (min-width: 1280px) {
+@include media('md') {
   .layout-wrapper {
     .layout {
-      min-height: 1200px;
       .layout-container {
         & h1 {
-          //font-size: 100px;
-          letter-spacing: 25px;
-        }
-      }
-    }
-  }
-}
-
-@media (min-width: 1024px) {
-  .layout-wrapper {
-    .layout {
-      // min-height: 800px;
-      .layout-container {
-        & h1 {
-          font-size: 100px;
-          // font-size: 30px;
-          //letter-spacing: 10px;
+          letter-spacing: 22px;
         }
       }
     }
