--- a/src/styles/_technologies.scss
+++ b/src/styles/_technologies.scss
@@ -1,43 +1,58 @@
 #Technologies {
   position: relative;
 
-  & .layout {
+  .layout {
     display: flex;
   }
 
   .technologies-wrapper {
     width: 100%;
-    height: 100%;
     position: relative;
-    display: grid;
+    display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 140px;
 
     .slider-item {
-      min-width: 450px;
-      height: 450px;
+      min-width: 150px;
+      min-height: 200px;
+      cursor: pointer;
 
-      & .slider-item-title {
+      .slider-item-title {
         height: 20%;
-        & h4 {
-          font-size: 30px;
+
+        h6 {
           text-transform: uppercase;
-          padding: 20px 0 20px;
+          margin-top: 20px;
         }
       }
 
       .slider-item-image {
         width: 100%;
-        height: 80%;
+        height: 170px;
         display: grid;
         justify-content: center;
         align-items: center;
         font-size: 120px;
         object-fit: cover;
         background-color: #0d0d0dd7;
-        svg {
-          width: 220px;
+
+        @include media('md') {
           height: 220px;
+        }
+
+        @include media('lg') {
+          height: 250px;
+        }
+
+        svg {
+          width: 84px;
+          height: 84px;
+
+          @include media('md') {
+            width: 124px;
+            height: 124px;
+          }
         }
       }
     }
@@ -45,15 +60,25 @@
 }
 
 .slick-slider {
-  & .slick-list {
-    overflow: visible;
-    & .slick-track {
-      width: max-content !important;
-
-      & .slick-slide {
-        min-width: 450px;
-        margin: 0 5px;
-      }
+  .slick-list {
+    .slick-track {
+      display: flex;
+      gap: 0 10px;
     }
   }
+  // & .slick-list {
+  //   overflow: visible;
+  //   & .slick-track {
+  //     width: max-content !important;
+
+  // & .slick-slide {
+  //   min-width: 250px;
+  //   margin: 0 5px;
+  // }
+  //   }
+  // }
+
+  // .slick-dots {
+  //   background-color: white;
+  // }
 }
